Update class calc

--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -30,7 +30,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of calculus in a complex variable}
-\newcommand{\duedate}{March 23, 2022}
+\newcommand{\duedate}{March 26, 2022}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -324,6 +324,16 @@ Seja C e \~C curvas em $D \subset \mathbb{C}$ com pontos inicial $z_0$ e final $
 
 $$\int_C f(z) d z = \int_{\tilde{C}} f(z) d z$$
 \end{theorem}
+
+\begin{lemma}[ML inequality]
+Seja f contida num domínio D contendo a curva C. Suponha $M \geq 0$ t.q. $| f(z) | \leq M\ \forall z \in \mathbb{C}$ e denote por L o comprimento de C. Então
+
+$$\left | \int_C f(z) d z \right | \leq M L$$
+\end{lemma}
+
+%\begin{theorem}[]
+%
+%\end{theorem}
 
 \end{document}
 
