--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -30,7 +30,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of calculus in a complex variable}
-\newcommand{\duedate}{March 27, 2022}
+\newcommand{\duedate}{April 08, 2022}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -173,9 +173,9 @@ Seja $z = x + iz,\ x, y \in \mathbb{R}$. Então
     
     \item $sen(z) = sen(x) cosh(y) + i cos(x) senh(y)$
     
-    \item $\mid cos z \mid^2 = cos^2(x) + senh^2(y)$
+    \item $\mid cos(z) \mid^2 = cos^2(x) + senh^2(y)$
     
-    \item $\mid sen z \mid^2 = sen^2(x) + senh^2(y)$
+    \item $\mid sen(z) \mid^2 = sen^2(x) + senh^2(y)$
 \end{enumerate}
 \end{prop}
 
@@ -292,7 +292,7 @@ $$\oint_C f(z) d z$$
 Seja $f(z) = u(z) + i v(z)$ uma função analítica em torno da curva C. Podemos escrever
 
 \begin{equation}\label{eq.1}
-    \int_C f(z) dz = \int_C G + i \int_C H
+    \int_C f(z) dz = \int_C G + i \int_C H \nonumber
 \end{equation}
 
 Em que $G,H: D \subset \mathbb{R}^2 \rightarrow \mathbb{R}^2$ com
