Fix typo, thks @erlonkelvim

--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -30,7 +30,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of calculus in a complex variable}
-\newcommand{\duedate}{April 08, 2022}
+\newcommand{\duedate}{April 09, 2022}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -106,7 +106,7 @@ $$\mid z \mid = \sqrt{x^2 + y^2}$$
 \end{definition}
 
 \begin{definition}[O Conjugado]
-Seja $z = x + iy$ um complexo, então o \textbf{conjurado} de um número complexo é definido por
+Seja $z = x + iy$ um complexo, então o \textbf{conjugado} de um número complexo é definido por
 
 $$\overline{z} = x - i y$$
 \end{definition}
@@ -122,7 +122,7 @@ $$\overline{z} = x - i y$$
     
     \item $z \in \mathbb{R}$ se e somente se $\overline{z} = z$
     
-    \item z é imaginário puro se e somente se $\overline{z} = z$
+    \item z é imaginário puro se e somente se $\overline{z} = -z$
 \end{enumerate}
 \end{prop}
 
