Fix typo, thx @julymartins3

--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -30,7 +30,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of calculus in a complex variable}
-\newcommand{\duedate}{April 09, 2022}
+\newcommand{\duedate}{April 10, 2022}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -161,7 +161,7 @@ Para $z \in \mathbb{C}$, vamos definir
 
 $$cos(z) = \frac{1}{2}(e^{iz} + e^{- iz})$$
 
-$$sen(z) = \frac{1}{2 i}(e^{- iz} - e^{- iz})$$
+$$sen(z) = \frac{1}{2 i}(e^{iz} - e^{- iz})$$
 \end{definition}
 
 
