Fix typo, thx @julymartins3

--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -138,7 +138,7 @@ Com as seguintes propriedades
     
     \item $cos(\theta) = \frac{x}{\mid r \mid}$
     
-    \item $sen(\theta) = \frac{y}{\mid x \mid}$
+    \item $sen(\theta) = \frac{y}{\mid r \mid}$
 \end{enumerate}
 \end{definition}
 
@@ -180,7 +180,7 @@ Seja $z = x + iz,\ x, y \in \mathbb{R}$. Então
 \end{prop}
 
 \begin{definition}[Função logaritmo]
-Seja $z \in \mathbb{C},\ z \neq 0$\footnote{Aqui: $Arg(z) = \theta,\ \theta \in (-\pi,\pi]$ e $Arg(z) = \theta$}
+Seja $z \in \mathbb{C},\ z \neq 0$\footnote{Aqui: $Arg(z) = \theta,\ \theta \in (-\pi,\pi]$ e $arg(z) = \theta$}
 
 $$Ln(z) = ln \mid z \mid + i Arg(z)$$
 
