--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -114,7 +114,7 @@ $$\overline{z} = x - i y$$
 \begin{prop}[Propriedades do conjugado] As seguintes propriedades valem para quaisquer $z, w \in \mathbb{C}$:
 
 \begin{enumerate}[label=(\alph*)]
-    \item $\overline{\overline{z}} = z$, $\overline{z \pm w} = \overline{z} \pm \overline{w}$ e $\overline{z w} = \overline{z} \overline{w}$
+    \item $\overline{\overline{z}} = z$, $\overline{z \pm w} = \overline{z} \pm \overline{w}$ e $\overline{z w} = \overline{z} \ \overline{w}$
     
     \item $\overline{z/w} = \overline{z}/\overline{w}$ se $w \neq 0$
     
@@ -129,7 +129,7 @@ $$\overline{z} = x - i y$$
 \begin{definition}[A Forma Polar]
 Seja $z = x + iy$ com $z \neq 0$, então podemos escrever z como
 
-$$z = r(cos(\theta) + sen(\theta))$$
+$$z = r(cos(\theta) + i sen(\theta))$$
 
 Com as seguintes propriedades
 
