--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -29,7 +29,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of calculus in a complex variable}
-\newcommand{\duedate}{May 17, 2022}
+\newcommand{\duedate}{May 18, 2022}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -459,7 +459,7 @@ $$Res_{z = z_0} f(z) = b_1 = \frac{p(z_0)}{q'(z_0)}$$
 \end{theorem}
 
 \begin{theorem}
-Zeros de funções analíticas são isolados.
+Zeros de funções analíticas complexas não identicamente nulas são isolados.
 \end{theorem}
 
 \begin{theorem}
